# Software-Development-Coursework

./: ActionSudoku.rc  CMakeLists.txt  README.md  SudokuApp.cpp  SudokuApp.h  main.cpp  pch.h
Levels/: level0.xml  level1.xml  level3.xml  levelTest.xml
SudokuLib/: CMakeLists.txt  ContainerVisitor.cpp  ContainerVisitor.h  Declaration.cpp  Declaration.h  DeclarationBackground.cpp  DeclarationBackground.h  DeclarationContainer.cpp  DeclarationContainer.h  DeclarationDigit.cpp  DeclarationDigit.h  DeclarationEnemy.cpp  DeclarationEnemy.h  DeclarationSparty.cpp  DeclarationSparty.h  DeclarationXRay.cpp  DeclarationXRay.h  DigitResetVisitor.cpp  DigitResetVisitor.h  EatVisitor.cpp  EatVisitor.h  Item.cpp  Item.h  ItemBackground.cpp  ItemBackground.h  ItemContainer.cpp  ItemContainer.h  ItemDigit.cpp  ItemDigit.h  ItemDigitGiven.cpp  ItemDigitGiven.h  ItemDigitMovable.cpp  ItemDigitMovable.h  ItemDigitVisitor.cpp  ItemDigitVisitor.h  ItemEnemy.cpp  ItemEnemy.h  ItemSparty.cpp  ItemSparty.h  ItemXRay.cpp  (+38 more)
Tests/: CMakeLists.txt  DeclarationSpartyTest.cpp  ItemSpartyTest.cpp  LevelTest.cpp  ScoreBoardTest.cpp  SudokuTest.cpp
